tests/negative/regression/r18.orng
// r18.orng:5:15: error: error: expected a compile-time constant type, got while
// const b: while let a: {break} = true; true { } = 0
//              ^
// 
const b: while let a: {break} = true; true { } = 0